--- a/style.css
+++ b/style.css
@@ -1,1 +1,147 @@
+* {
+    margin: 0;
+    padding: 0;
+    font-family: "Poppins", sans-serif;
+    box-sizing: border-box;
+}
 
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 120vh;
+    background: linear-gradient(135deg, #153677, #4e085f);
+    padding: 10px;
+    width: 100%;
+    min-width: 100vh;
+
+}
+
+.container {
+    width: 40%;
+    min-height: 100vh;
+    padding: 10px;
+
+}
+
+.todo-app {
+    width: 100%;
+    background-color: white;
+    margin: 40px 30px 70px;
+    padding: 40px 30px 70px;
+    border-radius: 10px;
+
+}
+
+.todo-app h2 {
+    color: #002765;
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.todo-app h2 img {
+    width: 30px;
+    margin-left: 10px;
+}
+
+.searchclass {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #edeef0;
+    border-radius: 30px;
+    padding-left: 20px;
+    margin-bottom: 25px;
+}
+
+#input {
+    border: none;
+    outline: none;
+    background: transparent;
+    font-size: 16px;
+    padding: 10px;
+}
+
+button {
+    padding: 10px;
+    width: 25%;
+    border-radius: 40px;
+    background: #ff5945;
+    color: white;
+    font-weight: bold;
+    font-size: 16px;
+    border: none;
+    outline: none;
+
+}
+
+button:hover {
+    padding: 10px;
+    width: 25.1%;
+    border-radius: 40px;
+    background-image: linear-gradient(to right, rgb(255, 0, 47) 0%, rgba(245, 2, 42, 0.559) 51%, rgba(224, 129, 137, 0.011) 100%);
+    color: white;
+    font-weight: bold;
+    border: none;
+    outline: none;
+    cursor: pointer;
+}
+
+ul li {
+    user-select: none;
+    padding: 12px 8px 12px 50px;
+    cursor: pointer;
+    font-size: 18px;
+    list-style: none;
+    position: relative;
+}
+
+ul li::before {
+    content: '';
+    position: absolute;
+    height: 26px;
+    width: 26px;
+    border-radius: 100%;
+    background-image: url(images/unchecked.png);
+    background-size: cover;
+    background-position: center;
+    top: 10px;
+    left: 8px;
+
+}
+
+ul li.checked {
+    color: #555;
+    text-decoration: line-through;
+}
+
+ul li.checked::before {
+    background-image: url(images/checked.png);
+}
+
+ul li span {
+    position: absolute;
+    right: 0;
+    top: 5px;
+    width: 40px;
+    height: 40px;
+    font-size: 22px;
+    color: #555;
+    line-height: 40px;
+    text-align: center;
+}
+
+ul li span:hover {
+    position: absolute;
+    background-color: #edeef0;
+    border-radius: 50%;
+    right: 0;
+    top: 5px;
+    width: 40px;
+    height: 40px;
+    font-size: 27px;
+    color: #ef4848;
+    line-height: 40px;
+    text-align: center;
+}
